style updates and hook up mailchimp form

--- a/assets/stylesheets/scss/application.scss
+++ b/assets/stylesheets/scss/application.scss
@@ -12,5 +12,5 @@
 @import "components/typography";
 
 body {
-  background: url('/assets/images/pattern-dots.png') repeat;
+  background: url('../../images/pattern-dots.png') repeat;
 }
