--- a/assets/stylesheets/scss/_overrides.scss
+++ b/assets/stylesheets/scss/_overrides.scss
@@ -10,3 +10,6 @@ $global-primary-background: $sp-blue;
 // Type
 $global-font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 $base-heading-font-weight: 700;
+
+$global-control-large-height: 59px;
+$button-large-line-height: $global-control-large-height - 6;
